// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TBoxBase
message TBoxBase
{	
	
	
	repeated DropBoxDefine DropBox = 1; // DropBox

}

// Defined in table: DropBox
message DropBoxDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string BoxPath = 2; // 宝箱图片路径
	
	
	optional uint32 Type = 3; // 奖励类型(1 金币 2 体力 3 侍女 4 道具 5 小游戏事件)
	
	
	optional uint32 RewardId = 4; // 道具id
	
	
	optional uint32 Value = 5; // 奖励值
	
	
	optional uint32 Interval = 6; // 生成间隔(为0表示不是时间间隔掉落)
	
	
	optional uint32 Level = 7; // 生成的关卡

}

