// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TMaidLevelBase
message TMaidLevelBase
{	
	
	
	repeated TMaidLevelDefine TMaidLevel = 1; // TMaidLevel

}

// Defined in table: TMaidLevel
message TMaidLevelDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Name = 2; // 名字
	
	
	optional string Path = 3; // 图片路径
	
	
	optional int32 Passlevels = 4; // 所属关卡（配置关卡ID)
	
	
	repeated string Reward = 5; // 产生的收益/秒（0个、1万、2亿、3兆、4京、5垓、6秭、7穰、8沟、9涧、10正、11载 、12极）
	
	
	optional int32 NextID = 6; // 合成后的ID
	
	
	repeated int32 ShopShow = 7; // 商店显示
	
	
	optional int32 DialogueID = 8; // 对话ID
	
	
	optional string RoleDescribe = 9; // 角色描述

}

