// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TPassLevelsBase
message TPassLevelsBase
{	
	
	
	repeated PassLevelsDefine PassLevels = 1; // PassLevels

}

// Defined in table: PassLevels
message PassLevelsDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Name = 2; // 名字
	
	
	optional string Path = 3; // 图片路径
	
	
	optional int32 NextLevels = 4; // 下个关卡ID
	
	
	optional int32 DialogueID = 5; // 对话ID

}

