// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TTurnBrandBase
message TTurnBrandBase
{	
	
	
	repeated TurnBrandDefine TurnBrand = 1; // TurnBrand

}

// Defined in table: TurnBrand
message TurnBrandDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Name = 2; // 名字
	
	
	optional string Head = 3; // 图片路径
	
	
	optional uint32 Reward = 4; // 掉落id
	
	
	optional uint32 Dialogue = 5; // 对话
	
	
	optional uint32 Weight = 6; // 权重

}

